maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (x!=0){ if  ( getIndication(x-1,y)=message-1){void setDirection(Direction.Sud)}}
                   ^JediEscaper:33: error: not found: value void
  if (x!=0){ if  ( getIndication(x-1,y)=message-1){void setDirection(Direction.Sud)}}
                                                   ^JediEscaper:33: error: value Sud is not a member of object plm.universe.Direction
  if (x!=0){ if  ( getIndication(x-1,y)=message-1){void setDirection(Direction.Sud)}}
                                                                               ^JediEscaper:34: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (x!=getMondeLargeur()-1){if (getIndication(x+1,y)=message-1){void setDirection(Direction.Nord)}}
                                  ^JediEscaper:34: error: not found: value void
  if (x!=getMondeLargeur()-1){if (getIndication(x+1,y)=message-1){void setDirection(Direction.Nord)}}
                                                                  ^JediEscaper:34: error: value Nord is not a member of object plm.universe.Direction
  if (x!=getMondeLargeur()-1){if (getIndication(x+1,y)=message-1){void setDirection(Direction.Nord)}}
                                                                                              ^JediEscaper:35: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if (y!=getMondeHauteur()-1){if (getIndication(x,y+1)=message-1){void setDirection(Direction.Est)}}
                                  ^JediEscaper:35: error: not found: value void
  if (y!=getMondeHauteur()-1){if (getIndication(x,y+1)=message-1){void setDirection(Direction.Est)}}
                                                                  ^JediEscaper:35: error: value Est is not a member of object plm.universe.Direction
  if (y!=getMondeHauteur()-1){if (getIndication(x,y+1)=message-1){void setDirection(Direction.Est)}}
                                                                                              ^JediEscaper:36: error: not found: value i
  if (y!=0){if (!aMurNord(x,y) && getIndication(x,y-1)>i+1){void setDirection(Direction.Ouest)}}}
                                                       ^JediEscaper:36: error: not found: value void
  if (y!=0){if (!aMurNord(x,y) && getIndication(x,y-1)>i+1){void setDirection(Direction.Ouest)}}}
                                                            ^JediEscaper:36: error: value Ouest is not a member of object plm.universe.Direction
  if (y!=0){if (!aMurNord(x,y) && getIndication(x,y-1)>i+1){void setDirection(Direction.Ouest)}}}
                                                                                        ^